# MensApp-TFG

./: README.md
cliente/: README.md  pyproject.toml
cliente/src/cliente/: biblioteca_cliente.py  cliente.py  interfaz.py
cliente/tests/: test_cliente.py
servidor/: README.md  pyproject.toml
servidor/src/servidor/: biblioteca_servidor.py  servidor.py
servidor/tests/: test_server.py
