[tool.poetry]
name = "cliente"
version = "0.1.0"
description = ""
authors = ["luistf24 <luis.tormo24@gmail.com>"]
readme = "README.md"
packages = [{include = "cliente", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"
pytest = "^7.4.0"

[tool.poe.tasks]
test = "poetry run pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
