[tool.poetry]
name = "servidor"
version = "0.1.0"
description = ""
authors = ["luistf24 <luis.tormo24@gmail.com>"]
readme = "README.md"
packages = [{include = "servidor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"
pytest = "^7.4.0"

[tool.poe.tasks]
test = "poetry run pytest"
install = "poetry install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
